deploy/k8s/helm/kong/kong-gw-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
  namespace: kong
spec:
  gatewayClassName: kong-class
  # listener is the ingress point for this API Gateway
  listeners:
  - name: my-application
  # optional
    # hostname: worlds.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
